--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,62 @@
                     <mainClass>org.test.int1.Main</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+          		<groupId>org.apache.tomcat.maven</groupId>
+          		<artifactId>tomcat7-maven-plugin</artifactId>
+          		<version>2.1</version>
+          		<executions>
+				    <execution>
+				    	<id>start-tomcat</id>
+				      	<phase>pre-integration-test</phase>
+				      	<goals>
+				        	<goal>run</goal>
+				      	</goals>
+				      	<configuration>
+				      		<path>/</path>
+				        	<fork>true</fork>
+				      	</configuration>
+				    </execution>
+				    <execution>
+				      	<id>stop-tomcat</id>
+				      	<phase>post-integration-test</phase>
+				      	<goals>
+				        	<goal>shutdown</goal>
+				      	</goals>
+				    </execution>
+				</executions>
+        	</plugin>
+            <plugin>
+  				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.15</version>
+				<configuration>
+				    <excludes>
+				      	<exclude>**/*Feature*</exclude>
+				      	<exclude>**/*Service*</exclude>				      	
+				      	<exclude>**/Abstract*</exclude>
+				    </excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+			  	<groupId>org.apache.maven.plugins</groupId>
+			  	<artifactId>maven-failsafe-plugin</artifactId>
+			  	<version>2.15</version>
+			  	<configuration>
+			    	<includes>
+			      		<include>**/*Feature.java</include>
+			      		<include>**/*Service*.java</include>
+			    	</includes>
+			  	</configuration>
+			  	<executions>
+			    	<execution>
+			      		<goals>
+			        		<goal>integration-test</goal>
+			        		<goal>verify</goal>
+			      		</goals>
+			    	</execution>
+			  	</executions>
+			</plugin>
         </plugins>
     </build>
 </project>
