Updated scm configuration in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -348,8 +348,8 @@
         </plugins>
     </build>
     <scm>
-    	<connection>scm:git:ssh://git@bitbucket.org:quantumofvalue/agile-guru-java.git</connection>
-    	<developerConnection>scm:git:ssh://git@bitbucket.org:quantumofvalue/agile-guru-java.git</developerConnection>
+    	<connection>scm:git:git@bitbucket.org:quantumofvalue/agile-guru-java.git</connection>
+    	<developerConnection>scm:git:git@bitbucket.org:quantumofvalue/agile-guru-java.git</developerConnection>
     	<url>https://bitbucket.org/quantumofvalue/agile-guru-java</url>
     </scm>
 </project>
