--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,7 @@
 				        	<goal>run</goal>
 				      	</goals>
 				      	<configuration>
+				      		<skip>true</skip>
 				      		<path>/</path>
 				        	<fork>true</fork>
 				      	</configuration>
@@ -311,6 +312,9 @@
 				      	<goals>
 				        	<goal>shutdown</goal>
 				      	</goals>
+				      	<configuration>
+				      		<skip>true</skip>
+				      	</configuration>
 				    </execution>
 				</executions>
         	</plugin>
@@ -320,8 +324,7 @@
 				<version>2.15</version>
 				<configuration>
 				    <excludes>
-				      	<exclude>**/*Feature*</exclude>
-				      	<exclude>**/*Service*</exclude>				      	
+				      	<exclude>**/*Feature*</exclude>				      					      	
 				      	<exclude>**/Abstract*</exclude>
 				    </excludes>
 				</configuration>
@@ -330,10 +333,10 @@
 			  	<groupId>org.apache.maven.plugins</groupId>
 			  	<artifactId>maven-failsafe-plugin</artifactId>
 			  	<version>2.15</version>
-			  	<configuration>
+			  	<configuration>			  		
+          			<skipTests>true</skipTests>
 			    	<includes>
-			      		<include>**/*Feature.java</include>
-			      		<include>**/*Service*.java</include>
+			      		<include>**/*Feature.java</include>			      		
 			    	</includes>
 			  	</configuration>
 			  	<executions>
